--- a/views/cms_clientes_smart.handlebars
+++ b/views/cms_clientes_smart.handlebars
@@ -321,37 +321,20 @@
         "master_tag_manager": "XXXXXX",
         "status": "ativo",
         "master_banner_revenues": "http://localhost:6060/images/231/banner-receitas.png",
-<<<<<<< HEAD
-        "master_custom_mini_banner04": "https://api-smartcomerci.com.br:9090/images/200/comofunciona.png",
-        "master_custom_mini_banner03": "https://api-smartcomerci.com.br:9090/images/200/comofunciona.png",
-        "master_custom_mini_banner02": "https://api-smartcomerci.com.br:9090/images/200/comofunciona.png",
-        "master_custom_mini_banner01": "https://api-smartcomerci.com.br:9090/images/200/comofunciona.png",
-        "master_custom_banner_aside": "https://api-smartcomerci.com.br:9090/images/200/comofunciona.png",
-        "master_custom_banner_rodape": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_banner_principal": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_texto_privacidade": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_banner_mini_cat": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub4": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub3": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub2": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub1": "https://api-smartcomerci.com.br:9090/images/2/1094_x_269_01.png",
-        "master_custom_banner_widescreen": "https://api-smartcomerci.com.br:9090/images/2/1366_x_140_01.png",
-=======
-        "master_custom_mini_banner04": "http://localhost:6060/images/200/comofunciona.png",
-        "master_custom_mini_banner03": "http://localhost:6060/images/200/comofunciona.png",
-        "master_custom_mini_banner02": "http://localhost:6060/images/200/comofunciona.png",
-        "master_custom_mini_banner01": "http://localhost:6060/images/200/comofunciona.png",
-        "master_custom_banner_aside": "http://localhost:6060/images/200/comofunciona.png",
-        "master_custom_banner_rodape": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_banner_principal": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_texto_privacidade": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_banner_mini_cat": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub4": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub3": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub2": "http://localhost:6060/images/2/1366_x_140_01.png",
-        "master_custom_banner_pub1": "http://localhost:6060/images/2/1094_x_269_01.png",
-        "master_custom_banner_widescreen": "http://localhost:6060/images/2/1366_x_140_01.png",
->>>>>>> merge-staging
+        "master_custom_mini_banner04": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
+        "master_custom_mini_banner03": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
+        "master_custom_mini_banner02": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
+        "master_custom_mini_banner01": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
+        "master_custom_banner_aside": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
+        "master_custom_banner_rodape": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_banner_principal": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_texto_privacidade": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_banner_mini_cat": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_banner_pub4": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_banner_pub3": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_banner_pub2": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
+        "master_custom_banner_pub1": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1094_x_269_01.png",
+        "master_custom_banner_widescreen": "https://api-smart-939610cb57d8.herokuapp.com/images/2/1366_x_140_01.png",
 
         "site_front_domain": "",
         "masters_namespace_mail": null,
