--- a/views/step2_startup.handlebars
+++ b/views/step2_startup.handlebars
@@ -1,5 +1,5 @@
 <script>
-    localStorage.MY_DOMAIN = 'https://cms.api-smartcomerci.com.br'
+    localStorage.MY_DOMAIN = 'https://api-smart-939610cb57d8.herokuapp.com'
 </script>
 <link href="../assets/css/step2.css" rel="stylesheet" />
 
