--- a/public/layouts/conteudo.html
+++ b/public/layouts/conteudo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://admin.api-smartcomerci.com.br/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
   <title>Conteudo</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
