--- a/public/layouts/receita_interna.html
+++ b/public/layouts/receita_interna.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" type="image/png" href="https://admin.api-smartcomerci.com.br/assets/img/lima-04.svg" />
+  <link rel="icon" type="image/png" href="https://api-smart-939610cb57d8.herokuapp.com/assets/img/lima-04.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="icon" type="image/png" href="../assets/img/lima-04.svg" />
@@ -1103,7 +1103,7 @@
       </div>
     </div>
   </div>
-  <!-- <script src="https://admin.api-smartcomerci.com.br/js/tinymce.js"></script> -->
+  <!-- <script src="https://api-smart-939610cb57d8.herokuapp.com/js/tinymce.js"></script> -->
   <script>
     var mainHost = 'http://localhost:6060';
 
