--- a/public/layouts/editarEmail.html
+++ b/public/layouts/editarEmail.html
@@ -880,7 +880,7 @@
   <script>
 
 
-    var mainHost = 'http://localhost:6060';
+    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
     var preparei = false
     let url = window.location.href
 
