--- a/public/layouts/home.html
+++ b/public/layouts/home.html
@@ -1979,7 +1979,7 @@
 
                   <div class="cardSearch">
                     <div
-                      style="background:  url(http://localhost:6060/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;"
+                      style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;"
                       class="imgSearch">
                     </div>
 
@@ -2029,7 +2029,7 @@
                     </svg>
                     <p class="cardNumber">01</p>
                   </div>
-                  <div style="background:  url(http://localhost:6060/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
+                  <div style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
     margin-top: -50px;" class="cardImageRevenue">
                   </div>
 
@@ -2052,7 +2052,7 @@
                     </svg>
                     <p class="cardNumber">01</p>
                   </div>
-                  <div style="background:  url(http://localhost:6060/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
+                  <div style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
                         margin-top: -50px;" class="cardImageRevenue">
                   </div>
 
@@ -2076,7 +2076,7 @@
                     </svg>
                     <p class="cardNumber">01</p>
                   </div>
-                  <div style="background:  url(http://localhost:6060/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
+                  <div style="background:  url(https://api-smart-939610cb57d8.herokuapp.com/images/default/produto-sem-imagem.jpg) no-repeat padding-box; background-size: contain;    background-position: center;
                           margin-top: -50px;" class="cardImageRevenue">
                   </div>
 
