--- a/public/layouts/inativarLoja.html
+++ b/public/layouts/inativarLoja.html
@@ -680,7 +680,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
-    var mainHost = 'http://localhost:6060';
+    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
 
     const showPasswordToggle = document.querySelectorAll('#show-password');
     showPasswordToggle.forEach((toggle) => {
