--- a/views/cms_login.handlebars
+++ b/views/cms_login.handlebars
@@ -1,5 +1,5 @@
 <script>
-    localStorage.MY_DOMAIN = 'http://localhost:6060'
+    localStorage.MY_DOMAIN = 'https://api-smart-939610cb57d8.herokuapp.com'
 </script>
 <style>
     .título-vitrines {
@@ -221,7 +221,7 @@
 </style>
 
 <script>
-    var mainHost = 'http://localhost:6060'
+    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com'
     function locals(id) {
         var list = ['Mundo das Embalagens']
         return list[id]
