--- a/views/cms_logistics.handlebars
+++ b/views/cms_logistics.handlebars
@@ -1,5 +1,5 @@
 <script>
-   localStorage.MY_DOMAIN = 'http://localhost:6060'
+   localStorage.MY_DOMAIN = 'https://api-smart-939610cb57d8.herokuapp.com'
 </script>
 <div class="content">
    <br />
