--- a/views/cms_tipo_usuario.handlebars
+++ b/views/cms_tipo_usuario.handlebars
@@ -437,7 +437,7 @@
             }
             $.ajax({
                 type: 'POST',
-                url: 'http://localhost:6060' + '/updateRulesUser',
+                url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/updateRulesUser',
                 data: params,
                 headers: {
                     'x-access-token': localStorage.token,
