--- a/public/layouts/conteudo.html
+++ b/public/layouts/conteudo.html
@@ -656,7 +656,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script>
-    var mainHost = 'http://localhost:6060';
+    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
     $.ajax({
       type: "POST",
       url: mainHost + '/getByTableName',
