--- a/public/layouts/paginas_instituiconais.html
+++ b/public/layouts/paginas_instituiconais.html
@@ -1093,7 +1093,7 @@
     iniciaEditorHtml("#editorFullCode")
 
 
-    var mainHost = 'http://localhost:6060';
+    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
     const NAM = window.location.href.split("?").pop()
     console.log({ NAM })
     var NAME_PAGE = window.location.href.split("?")[1]
@@ -1181,7 +1181,7 @@
     iniciaEditorHtml("#editorFullCode")
 
 
-    var mainHost = 'http://localhost:6060';
+    var mainHost = 'https://api-smart-939610cb57d8.herokuapp.com';
     var NAME_PAGE = window.location.href.split("?")[1]
     var NEW = true
 
