--- a/views/cms_clientes_smart.handlebars
+++ b/views/cms_clientes_smart.handlebars
@@ -320,7 +320,7 @@
         "master_estoque_negativo": "on",
         "master_tag_manager": "XXXXXX",
         "status": "ativo",
-        "master_banner_revenues": "http://localhost:6060/images/231/banner-receitas.png",
+        "master_banner_revenues": "https://api-smart-939610cb57d8.herokuapp.com/images/231/banner-receitas.png",
         "master_custom_mini_banner04": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
         "master_custom_mini_banner03": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
         "master_custom_mini_banner02": "https://api-smart-939610cb57d8.herokuapp.com/images/200/comofunciona.png",
@@ -1184,7 +1184,7 @@ color: #222B45 !important;">${name}</label>
                         }
                         $.ajax({
                             type: 'POST',
-                            url: 'http://localhost:6060' + '/autenticateAdmin',
+                            url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/autenticateAdmin',
                             data: params,
                             headers: {
                                 'x-access-token': localStorage.token,
@@ -1302,7 +1302,7 @@ color: #222B45 !important;">${name}</label>
                     }
                     $.ajax({
                         type: 'POST',
-                        url: 'http://localhost:6060' + '/autenticateAdmin',
+                        url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/autenticateAdmin',
                         data: params,
                         headers: {
                             'x-access-token': localStorage.token,
@@ -1454,7 +1454,7 @@ color: #222B45 !important;">${name}</label>
                         }
                         $.ajax({
                             type: 'POST',
-                            url: 'http://localhost:6060' + '/autenticateAdmin',
+                            url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/autenticateAdmin',
                             data: params,
                             headers: {
                                 'x-access-token': localStorage.token,
@@ -1502,7 +1502,7 @@ color: #222B45 !important;">${name}</label>
         //console.log("requeste para ", url, params)
         return $.ajax({
             type: type,
-            url: 'http://localhost:6060' + url,
+            url: 'https://api-smart-939610cb57d8.herokuapp.com' + url,
             data: params,
             headers: {
                 'x-access-token': localStorage.token,
@@ -1538,7 +1538,7 @@ color: #222B45 !important;">${name}</label>
     async function criaClienteNovo(elemento) {
         let lista4 = JSON.parse(sessionStorage.ALL_CLIENTS)
         let mailNew = EDIT_OBJ['master_business_mail']
-        var mainHost = "http://localhost:6060";
+        var mainHost = "https://api-smart-939610cb57d8.herokuapp.com";
         const exists = lista4.find((x) => x.master_business_mail === mailNew)
         if (!exists) {
             let fields = []
