--- a/views/cms_criar_usuario.handlebars
+++ b/views/cms_criar_usuario.handlebars
@@ -923,7 +923,7 @@
                         }
                         $.ajax({
                             type: 'POST',
-                            url: 'http://localhost:6060' + '/autenticateAdmin',
+                            url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/autenticateAdmin',
                             data: params,
                             headers: {
                                 'x-access-token': localStorage.token,
@@ -1041,7 +1041,7 @@
                     }
                     $.ajax({
                         type: 'POST',
-                        url: 'http://localhost:6060' + '/autenticateAdmin',
+                        url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/autenticateAdmin',
                         data: params,
                         headers: {
                             'x-access-token': localStorage.token,
@@ -1193,7 +1193,7 @@
                         }
                         $.ajax({
                             type: 'POST',
-                            url: 'http://localhost:6060' + '/autenticateAdmin',
+                            url: 'https://api-smart-939610cb57d8.herokuapp.com' + '/autenticateAdmin',
                             data: params,
                             headers: {
                                 'x-access-token': localStorage.token,
@@ -1241,7 +1241,7 @@
         //console.log("requeste para ", url, params)
         return $.ajax({
             type: type,
-            url: 'http://localhost:6060' + url,
+            url: 'https://api-smart-939610cb57d8.herokuapp.com' + url,
             data: params,
             headers: {
                 'x-access-token': localStorage.token,
