--- a/views/step1_startup.handlebars
+++ b/views/step1_startup.handlebars
@@ -1,5 +1,5 @@
 <script>
-    localStorage.MY_DOMAIN = 'http://localhost:6060'
+    localStorage.MY_DOMAIN = 'https://api-smart-939610cb57d8.herokuapp.com'
 </script>
 <style>
     .título-vitrines {
@@ -192,7 +192,7 @@
     }
 </style>
 <script>
-    localStorage.MY_DOMAIN = 'http://localhost:6060'
+    localStorage.MY_DOMAIN = 'https://api-smart-939610cb57d8.herokuapp.com'
 
     $(".inputTXT").keyup(function () {
         // console.log("asdsadsadsad")
